--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -3,8 +3,9 @@
   command = "npm run build"
 
 [build.environment]
-  NODE_VERSION = "16"
-  NPM_VERSION = "8"
+  NODE_VERSION = "18"
+  NPM_VERSION = "9"
+  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
